force-app/main/default/objects/Contact__c/Contact__c.object-meta.xml
<CustomObject>
    <description>Messebesucher</description>
    <label>Trade Fair Contact</label>
    <nameField>
        <displayFormat>TFC-{00000}</displayFormat>
        <label>Trade Fair Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Fair Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>