force-app/main/default/objects/Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trade Fair Contacts</relationshipLabel>
    <relationshipName>Trade_Fair_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>