force-app/main/default/objects/Contact__c/fields/Visit_Report_Trade_Fair__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report_Trade_Fair__c</fullName>
    <label>Visit Report Trade Fair</label>
    <referenceTo>VisitReportTradeFair__c</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>